Fix: Align Collapsed View of Filter Selector (fixes #703)

--- a/packages/reports/app/styles/navi-reports/components/report-builder.less
+++ b/packages/reports/app/styles/navi-reports/components/report-builder.less
@@ -80,7 +80,8 @@
     max-height: 35%;
 
     &--collapsed {
-      align-items: flex-start;
+      align-items: center;
+      padding: 0px 14px;
       flex-flow: row;
 
       .report-builder__container-header {
@@ -158,7 +159,7 @@
     overflow: auto;
 
     &.filter-collection--collapsed {
-      margin-top: 2px;
+      margin-top: 6px;
     }
   }
 
